--- a/thesis.tex
+++ b/thesis.tex
@@ -21,7 +21,9 @@
 %\usepackage{fancyhdr}				% Falta configurarlo bien
 %\pagestyle{fancy}
 \usepackage[square, numbers]{natbib}	% Bibliography
- 
+\usepackage{tikz}
+\usetikzlibrary{calc}
+
 % Agregados por el usuario
 \usepackage{amssymb,amsmath}
 \usepackage[only,Yup]{stmaryrd} 		% El símbolo de la estrella
@@ -42,9 +44,41 @@
 \author{Ing. Autor de la Tesis}
 \date{20xx}
 
+
 \frontmatter
 \begin{document}
-\maketitle
+
+\begin{titlepage}
+	\begin{tikzpicture}[remember picture, overlay]
+	\coordinate (topleft) at ([xshift=1.6cm, yshift=-1.6cm]current page.north west);
+	\coordinate (bottomright) at ([xshift=-1.6cm, yshift=1.6cm]current page.south east);
+		\draw[double, line width = 0.5pt] 
+		(topleft) rectangle (bottomright);
+	\end{tikzpicture}
+	\hfill \includegraphics[height=15mm]{figs/logo_itba.png}\par
+	\noindent \onehalfspacing \large
+	\href{http://www.itba.edu.ar}{\color{black}{\textbf{INSTITUTO TECNOLÓGICO DE BUENOS AIRES}}}\par
+	\noindent \textbf{ESCUELA DE POSTGRADO}\par
+	\vspace{4cm}
+	\begin{center}
+		{\Huge \textbf{TÍTULO DEL TRABAJO}\par}
+		{\Huge \textbf{Subtítulo del trabajo (si lo hubiere)}\par}
+	\end{center}
+	\vspace{3cm}
+	\noindent \textbf{AUTOR: Ing. Nombre \textsc{Apellido}}\par
+	\noindent \textbf{DIRECTOR: Dr./Dra. Nombre \textsc{Apellido}}\par
+	\noindent \textbf{CO-DIRECTOR: Dr./Dra. Nombre \textsc{Apellido}}\par	
+	\vspace{2cm}
+	{\noindent  \normalsize
+	 \textbf{TESIS PRESENTADA PARA LA OBTENCIÓN DEL TÍTULO DE DOCTOR EN INGENIERÍA}\par}
+	\vfill
+	\begin{center}
+		\textbf{BUENOS AIRES}\\
+		\textbf{PRIMER / SEGUNDO CUATRIMESTRE, 2018}\\
+	\end{center}
+\end{titlepage}
+
+%\maketitle
 \tableofcontents 
 \listoffigures			% Listado de Figuras
 \listoftables			% Listado de Tablas
