--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{book} 
 \usepackage[utf8]{inputenc}			% Required for inputting international characters
-\usepackage[T1]{fontenc}				% Output font encoding for international characters
+\usepackage[T1]{fontenc}			% Output font encoding for international characters
 \usepackage{graphicx}
 %\graphicspath{ {figs/} }
 \usepackage{mathpazo} 				% Use the Palatino font by default (Ricardo)
@@ -18,12 +18,11 @@
     citecolor=blue,    
 }
 \usepackage[spanish, es-tabla, es-nodecimaldot]{babel}
-%\usepackage{fancyhdr}				% Falta configurarlo bien
-%\pagestyle{fancy}
-\usepackage[square, numbers]{natbib}	% Bibliography
-\usepackage{tikz}
-\usetikzlibrary{calc}
-
+\usepackage{fancyhdr}				% Falta configurarlo bien
+\usepackage[square, numbers]{natbib}		% Bibliography
+\usepackage{tikz}					% Para poder dibujar el recuadro de la página del título
+\usetikzlibrary{babel}				% tikz no funciona con babel si no se indica
+    
 % Agregados por el usuario
 \usepackage{amssymb,amsmath}
 \usepackage[only,Yup]{stmaryrd} 		% El símbolo de la estrella
@@ -47,35 +46,40 @@
 
 \frontmatter
 \begin{document}
-
+%
 \begin{titlepage}
+	% Si algo hay que sacar pq no existe, ponerlo oentre \phantom{...} para que respete la ubicación de las cosas
 	\begin{tikzpicture}[remember picture, overlay]
-	\coordinate (topleft) at ([xshift=1.6cm, yshift=-1.6cm]current page.north west);
-	\coordinate (bottomright) at ([xshift=-1.6cm, yshift=1.6cm]current page.south east);
-		\draw[double, line width = 0.5pt] 
-		(topleft) rectangle (bottomright);
+		\coordinate (top_right) at ([xshift=-2.5cm, yshift=-2.5cm]current page.north east);
+		\coordinate (top_left) at ([xshift=1.6cm, yshift=-1.6cm]current page.north west);
+		\coordinate (bottom_right) at ([xshift=-1.6cm, yshift=1.6cm]current page.south east);
+		\node[inner sep=0, anchor=north east] at (top_right) {\includegraphics[height=19mm, trim={180 200 200 200}, clip]{figs/logo_itba.png}};		
+		\draw[double, line width = 0.5pt] (top_left) rectangle (bottom_right);
 	\end{tikzpicture}
-	\hfill \includegraphics[height=15mm]{figs/logo_itba.png}\par
-	\noindent \onehalfspacing \large
-	\href{http://www.itba.edu.ar}{\color{black}{\textbf{INSTITUTO TECNOLÓGICO DE BUENOS AIRES}}}\par
-	\noindent \textbf{ESCUELA DE POSTGRADO}\par
-	\vspace{4cm}
-	\begin{center}
-		{\Huge \textbf{TÍTULO DEL TRABAJO}\par}
-		{\Huge \textbf{Subtítulo del trabajo (si lo hubiere)}\par}
-	\end{center}
-	\vspace{3cm}
-	\noindent \textbf{AUTOR: Ing. Nombre \textsc{Apellido}}\par
-	\noindent \textbf{DIRECTOR: Dr./Dra. Nombre \textsc{Apellido}}\par
-	\noindent \textbf{CO-DIRECTOR: Dr./Dra. Nombre \textsc{Apellido}}\par	
-	\vspace{2cm}
-	{\noindent  \normalsize
-	 \textbf{TESIS PRESENTADA PARA LA OBTENCIÓN DEL TÍTULO DE DOCTOR EN INGENIERÍA}\par}
-	\vfill
-	\begin{center}
-		\textbf{BUENOS AIRES}\\
-		\textbf{PRIMER / SEGUNDO CUATRIMESTRE, 2018}\\
-	\end{center}
+	\onehalfspacing
+	\par
+	\begin{large}
+		\noindent \href{http://www.itba.edu.ar}{\color{black}{\textbf{INSTITUTO TECNOLÓGICO DE BUENOS AIRES}}}\par
+		\noindent \textbf{DEPARTAMENTO DE DOCTORADO}\par
+		\vspace{4cm}
+		\begin{center}
+			{\Huge \textbf{TÍTULO DEL TRABAJO}\par}
+			{\Huge \textbf{Subtítulo del trabajo (si lo hubiere)}\par}
+		\end{center}
+		\vspace{3.2cm}
+		\noindent \textbf{AUTOR:} Ing. Nombre \textsc{Apellido}\par
+		\vspace{0.5cm}
+		\noindent \textbf{DIRECTOR:} Dr./Dra. Nombre \textsc{Apellido}\par
+		\noindent \textbf{CO-DIRECTOR:} Dr./Dra. Nombre \textsc{Apellido}\par	
+		\vspace{3cm}
+		\noindent{TESIS PRESENTADA PARA LA OBTENCIÓN DEL TÍTULO DE}\par
+		\noindent\textbf{DOCTOR EN INGENIERÍA / informática}\par
+		\vfill
+		\begin{center}
+			\textbf{BUENOS AIRES}\\
+			\textbf{PRIMER / SEGUNDO CUATRIMESTRE, 2018}
+		\end{center}
+	\end{large}
 \end{titlepage}
 
 %\maketitle
@@ -84,6 +88,7 @@
 \listoftables			% Listado de Tablas
 
 \chapter*{Abreviaturas}
+\addcontentsline{toc}{chapter}{Abreviaturas}
 % Si se pasa de una hoja usar longtables
 \begin{table}[htb]
 	\large
@@ -95,6 +100,7 @@
 \end{table}
 
 \mainmatter
+\pagestyle{fancy}
 \pagenumbering{arabic}
 \include{chapters/chapter1}
 %\include{chapters/chapter2}
@@ -106,5 +112,6 @@
 
 \bibliographystyle{ieeetr}
 \bibliography{bibliography}
+\addcontentsline{toc}{chapter}{\bibname}
 
 \end{document}  
