--- a/thesis.tex
+++ b/thesis.tex
@@ -1,12 +1,23 @@
+% !TEX TS-program = LuaLaTeX
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{book} 
-\usepackage[utf8]{inputenc}			% Required for inputting international characters
 \usepackage[T1]{fontenc}			% Output font encoding for international characters
-%\usepackage[no-math]{fontspec}    
-%\setmainfont{Avenir}
+\usepackage[spanish, es-tabla, es-nodecimaldot]{babel}
+\usepackage{fontspec}    
+\setmainfont{avenirnext}[
+  Path = ./figs/ ,
+  UprightFeatures    = {FontIndex=7} ,
+  BoldFeatures       = {FontIndex=5} ,
+  ItalicFeatures     = {FontIndex=4},
+  BoldItalicFeatures = {FontIndex=6} ,
+]
+% 0 BOLD - 1 BOLD ITALIC - 2 SEMI BOLD
+% 3 SEMI BOLD ITALIC - 4 ITALIC - 5 MEDIUM - 6 MEDIUM ITALIC
+% 7 NORMAL - 8 Heavy - 9 Heavy Italic
+% 10 Ultraligth - 11 ultralight italic
+
 \usepackage{graphicx}
 %\graphicspath{ {figs/} }
-\usepackage{mathpazo} 				% Use the Palatino font by default (Ricardo)
 \usepackage[onehalfspacing]{setspace}
 \usepackage[a4paper, width=154mm, top=33mm, bottom=33mm, bindingoffset=6mm]{geometry}
 \RequirePackage{caption} 			% Required for customising the captions
@@ -19,12 +30,10 @@
     urlcolor=blue,
     citecolor=blue,    
 }
-\usepackage[spanish, es-tabla, es-nodecimaldot]{babel}
 %\usepackage{fancyhdr}				% Falta configurarlo bien
-\usepackage[square, numbers]{natbib}		% Bibliography
+\usepackage[square, numbers]{natbib}	% Bibliography
 \usepackage{tikz}					% Para poder dibujar el recuadro de la página del título
-\usetikzlibrary{babel}				% tikz no funciona con babel si no se indica
-    
+\usetikzlibrary{babel}					% tikz no funciona con babel si no se indica
 % Agregados por el usuario
 \usepackage{amssymb,amsmath}
 \usepackage[only,Yup]{stmaryrd} 		% El símbolo de la estrella
@@ -105,5 +114,4 @@
 \bibliographystyle{ieeetr}
 \bibliography{bibliography}
 \addcontentsline{toc}{chapter}{\bibname}    %Agrega bibliografía al índice
-
 \end{document}  
