Updates from ShareLaTeX

--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,8 @@
 \documentclass[10pt]{book} 
 \usepackage[T1]{fontenc}			% Output font encoding for international characters
 \usepackage[spanish, es-tabla, es-nodecimaldot]{babel}
-\usepackage{fontspec}    
+\usepackage{fontspec}
+%\setmainfont{Avenir Next} En OSX con esto solo alcanza
 \setmainfont{avenirnext}[
   Path = ./figs/ ,
   UprightFeatures    = {FontIndex=7} ,
