--- a/appendices/appendix1.tex
+++ b/appendices/appendix1.tex
@@ -2,3 +2,10 @@
 % !TEX root = ../thesis.tex
 \chapter{Apéndice 1} \label{app1}
 Este es un apéndice.
+\textit{Esto es texto en itálica}.
+
+\textbf{Esto es texto en negrita}.
+
+\textsc{Esto es texto en Small Caps}
+
+\textit{\textbf{Esto es texto en negrita itálica}}.
