--- a/preamble/copyright.tex
+++ b/preamble/copyright.tex
@@ -1,4 +1,4 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
 \vspace*{0.8\textheight}
-Este bla bla bla lo va a escribir Marcela \textcopyright.
+\noindent \@author: \@title. \textit{Tesis presentada como requisito parcial para acceder al grado de \textbf{Doctor en Ingeniería / Ingeniería Informática} del Instituto Tecnológico de Buenos Aires}. \textcopyright Copyright by \@author
