--- a/thesis.tex
+++ b/thesis.tex
@@ -10,6 +10,7 @@
                      top=25mm, bottom=25mm, inner=30mm, outer=25mm]{geometry}
 \usepackage{sansmathfonts}				% Sans Serif equations
 \renewcommand*\familydefault{\sfdefault} 		% Sans Serif as default font
+\usepackage{ae,aecompl} 			% Mejor Impresión
 \usepackage[utf8]{inputenc}				% Encoding of files: utf8
 \usepackage[T1]{fontenc}					% Output font encoding for international characters
 
