--- a/preamble/resumen.tex
+++ b/preamble/resumen.tex
@@ -1,4 +1,4 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
 \chapter*{Resumen}
-Aca va el resumen de la tesis en español. No mas de 390 palabras. {\color{red}Preguntar a Ricardo la cantidad máxima de palabras.}
+Resumen de la tesis en español. No más de 390 palabras.
