--- a/preamble/copyright.tex
+++ b/preamble/copyright.tex
@@ -1,4 +1,7 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
 \vspace*{0.8\textheight}
-\noindent \@author: \@title. \textit{Tesis presentada como requisito parcial para acceder al grado de \textbf{Doctor en Ingeniería / Ingeniería Informática} del Instituto Tecnológico de Buenos Aires}. \textcopyright Copyright by \@author
+\noindent \@author: \@title. \textit{Tesis presentada como requisito parcial para acceder al grado de \textbf{\@degree} del Instituto Tecnológico de Buenos Aires}.
+\par
+\vspace{1\baselineskip}
+\noindent Copyright \textcopyright\space\@copyrightYear\space by \@author
