--- a/preamble/symbols.tex
+++ b/preamble/symbols.tex
@@ -8,7 +8,7 @@
 	\endfirsthead%
 	\textbf{Símbolo} & \textbf{Descripción} \\[0.5ex] \hline%
 	\endhead%
-	$\mathbf{A}$ & Matriz del sistema\\
+	$\mathbf{A}$ & Primer Letra del Abecedario\\
 \end{longtable}
 
 \section*{Letras Griegas}
