--- a/preamble/symbols.tex
+++ b/preamble/symbols.tex
@@ -1,7 +1,8 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
 \chapter*{Símbolos y Abreviaturas}
-\addcontentsline{toc}{chapter}{Abreviaturas}
+\addcontentsline{toc}{chapter}{Símbolos y Abreviaturas}
+\markboth{\MakeUppercase{Símbolos y Abreviaturas}}{\MakeUppercase{Símbolos y Abreviaturas}}
 \section*{Letras}
 \begin{longtable}{>{\raggedright\arraybackslash}m{0.2\columnwidth}>{\raggedright\arraybackslash}m{0.8\columnwidth}}
 	\textbf{Símbolo} & \textbf{Descripción} \\[0.5ex] \hline%
